# tqchem

./: .gitignore  .readthedocs.yaml  INSTALLATION.md  LICENSE.md  LICENSE.txt  NOTICE  NOTICE.md  README.md  pyproject.toml  recipe.yaml
.conda-recipe/: recipe.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: release.yaml
docs/: requirements.txt
docs/source/: conf.py  examples.rst  index.rst
docs/source/examples/: conformer_coordinate_screening.ipynb  conformer_search.ipynb  create_vmd_movie.ipynb  energy_scanning.ipynb
tqchem/: __init__.py  __main__.py  __main__.pyi  batframe.py  batframe.pyi  chem.py  chem.pyi  exceptions.py  exceptions.pyi  functional_groups.py  functional_groups.pyi  internal_coordinates.py  internal_coordinates.pyi  molgraph.py  molgraph.pyi  puckering.py  puckering.pyi  spectra.py  spectra.pyi  viewer.py  viewer.pyi  xtb_api.py  xtb_api.pyi
tqchem/pyarmor_runtime_005970/: __init__.py
tqchem/pyarmor_runtime_005970/py310/windows_x86_64/: pyarmor_runtime.pyd
tqchem/pyarmor_runtime_005970/py311/windows_x86_64/: pyarmor_runtime.pyd
tqchem/pyarmor_runtime_005970/py312/windows_x86_64/: pyarmor_runtime.pyd
tqchem/pyarmor_runtime_005970/windows_x86_64/: pyarmor_runtime.pyd
tqchem/pyarmor_runtime_006359/: __init__.py
tqchem/pyarmor_runtime_006359/windows_x86_64/: pyarmor_runtime.pyd
tqchem/ttconf/: __init__.py  conformer_results.py  conformer_results.pyi  crest_wrapper.py  crest_wrapper.pyi  electronic_structure_interfaces.py  electronic_structure_interfaces.pyi  factory.py  factory.pyi  ttconf.py  ttconf.pyi
tqchem/ttopt/: __init__.py  maxvol.py  maxvol.pyi  ttopt.py  ttopt.pyi
