[project]
name = "tqchem"
version = "0.1.3"
description = "TQchem a toolkit for chemistry. It includes functions to represent molecular systems in internal coordinates and perform optimization."
readme = "README.md"
classifiers = [ "Programming Language :: Python :: 3", "License :: Other/Proprietary License", "Operating System :: OS Independent",]
requires-python = "> 3.9"
dependencies = []
[[project.authors]]
name = "Roman Ellerbrock"
email = "romanellerbrock@gmail.com"

[[project.authors]]
name = "Ruslan Mallaev"
email = "ruma@terraquantum.swiss"

[[project.authors]]
name = "Alexander Paul"
email = "alp@terraquantum.swiss"

[[project.maintainers]]
name = "Ruslan Mallaev"
email = "ruma@terraquantum.swiss"

[[project.maintainers]]
name = "Alexander Paul"
email = "alp@terraquantum.swiss"

[[project.maintainers]]
name = "Roman Ellerbrock"
email = "romanellerbrock@gmail.com"

[build-system]
requires = [ "setuptools>=40.8.0", "wheel",]
build-backend = "setuptools.build_meta"

[project.license]
file = "LICENSE.txt"

[project.scripts]
tqchem = "tqchem.__main__:main"
